src/components/header/ThemeSelector.css
/*Dark theme*/
body.dark {
  /* background-color: #313338; */
  background-color: #000;
}
body.dark div {
  color: var(--primary-color-light);
}
body.dark svg {
  color: #fff;
}
body.dark a {
  color: var(--primary-color-light);
}
body.dark .menu-circle {
  background-color: var(--primary-color-light);
}
body.dark p {
  color: var(--primary-color-white);
}
/*Light theme*/
body.light {
  background-color: #e3e3e3;
}
body.light div {
  color: var(--primary-color-dark);
}
body.light a {
  color: var(--primary-color-dark);
}
body.light .menu-circle {
  background-color: var(--primary-color-dark);
}
body.light span {
  color: var(--primary-color-dark);
}
body.light p {
  color: var(--primary-color-black);
}

/*Sitewide SVG effects*/
.theme-selector svg {
  opacity: 0.6;
  transition: 100ms ease-in-out;
}
.theme-selector svg:hover {
  opacity: 0.8;
}
.theme-selector svg:active {
  opacity: 1;
}

/*Specific to Theme Selector*/
.theme-selector svg.active {
  display: inline-block !important;
}

